--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,169 @@
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #000000;
+    color: white;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
+*{
+    background: black;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
+    
+    width: 100%;
+    margin-top: 0px;
+    color: white;
+    background-color: #000000;
+    box-sizing: border-box;
+}
 
 
+.grid-item1, .grid-item2, .grid-item3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    background-color: #000000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+    gap: 10px;
+}
+
+.grid-item1 {
+    margin-left: 20px;
+    background-color: #000000;
+    width: 500px;
+    padding-right: 20px;
+}
+
+.grid-item2 {
+    margin-left: 40px;
+    background-color: #000000;
+    width: 500px;
+    padding-right: 30px;
+}
+
+.grid-item3 {
+  margin-top: 3px;
+
+    margin-left: 0px;
+    background: local;
+    width: 500px;
+    margin-top: 4px;
+    height: 400px;
+}
 
 
+.insights {
+    margin-top: 30px;
+    padding: 20px;
+    color: rgb(0, 0, 0);
+    background-color: #000000;
+    border-radius: 8px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.in {
+    margin-top:     130px;
+    margin-left:81%;
+    padding: 20px;
+
+    color: rgb(252, 252, 252);
+    background-color: #000000;
+
+    box-sizing: border-box;
+}
+
+.error {
+    color: red;
+    font-weight: bold;
+}
+
+.loading {
+    font-size: 20px;
+    font-weight: bold;
+    color: #000000;
+}
+.charts-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 30px;
+    background-color: #000000;
+    color: white;
+}
+
+
+.chart-item {
+    width: 100%;
+    max-width: 300px;
+    color: white;
+    background-color: #000000;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+
+    .grid-item {
+        padding: 15px;
+    }
+}
+
+
+@media (max-width: 480px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+        gap: 10px; 
+    }
+
+    .grid-item {
+        padding: 10px; 
+    }
+
+    .charts-grid {
+        flex-direction: column; 
+    }
+
+    .chart-item {
+        width: 100%; 
+    }
+    .in
+    {
+        margin-top: 300px;
+      font-size: large;
+line-height: 28px;
+        width: 100%;
+        height: 300px;
+    }
+}
+
+@media (max-width: 368px) {
+    .grid-container {
+        grid-template-columns: 1fr; 
+    }
+
+
+    .grid-item {
+        padding: 10px; 
+    }
+
+    .insights, .in {
+        margin-left: 0;
+        width: 100%;
+    }
+}
