--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,33 +3,51 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #000000;
+   
+   
     color: white;
     min-height: 100vh;
     box-sizing: border-box;
 }
-*{
-    background: black;
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -4;
+    filter: brightness(0.16); 
+  }
+  
+  .video-container video {
+    width: 100%;
+    height: 100%;
+    opacity: 1; 
+    object-fit: cover;
+    filter: blur(0.3px);
+  }
+header h1{
+    margin-top: -5px;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
-    
     width: 100%;
     margin-top: 0px;
     color: white;
-    background-color: #000000;
+    background: local;
     box-sizing: border-box;
 }
 
 
 .grid-item1, .grid-item2, .grid-item3 {
     display: flex;
+ 
+
     flex-direction: column;
     align-items: center;
-    color: white;
-    background-color: #000000;
+    color: white; background: local;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
     width: 100%;
@@ -37,51 +55,51 @@
 }
 
 .grid-item1 {
-    margin-left: 20px;
-    background-color: #000000;
-    width: 500px;
+    margin-left: 0px;
+    width: 550px;
+    
     padding-right: 20px;
+    background: local;
 }
 
 .grid-item2 {
-    margin-left: 40px;
-    background-color: #000000;
-    width: 500px;
+    position: relative;
+    margin-left: 60px;
+    width: 550px;background: local;
+    color: white;
     padding-right: 30px;
+    margin-top: 5px;
 }
 
 .grid-item3 {
   margin-top: 3px;
-
-    margin-left: 0px;
+  color: white;
+    margin-left: 100px;
     background: local;
-    width: 500px;
+    width: 400px;
+    margin-right: 0%;
+    padding-right:0%;
     margin-top: 4px;
-    height: 330px;
+    height: 450px;
+    
 }
 
 
 .insights {
+    
     margin-top: 30px;
     padding: 20px;
     color: rgb(0, 0, 0);
-    background-color: #000000;
+   
     border-radius: 8px;
     width: 100%;
     box-sizing: border-box;
 }
 
-.in {
-    margin-top:550px;
-    margin-left:70%;
-    padding: 20px;
-position:fixed;
-    color: rgb(252, 252, 252);
-    background-color: #000000;
 
-    box-sizing: border-box;
+.op{
+    margin-top: 30px;
 }
-
 .error {
     color: red;
     font-weight: bold;
@@ -90,7 +108,7 @@ position:fixed;
 .loading {
     font-size: 20px;
     font-weight: bold;
-    color: #000000;
+    color: #bababa;
 }
 .charts-grid {
     display: flex;
@@ -98,7 +116,7 @@ position:fixed;
     justify-content: space-around;
     gap: 20px;
     margin-top: 30px;
-    background-color: #000000;
+
     color: white;
 }
 
@@ -107,12 +125,13 @@ position:fixed;
     width: 100%;
     max-width: 300px;
     color: white;
-    background-color: #000000;
+   
     margin: 10px 0;
     padding: 10px;
     border-radius: 8px;
     box-sizing: border-box;
 }
+
 
 @media (max-width: 768px) {
     .grid-container {
@@ -126,15 +145,24 @@ position:fixed;
 
 
 @media (max-width: 480px) {
+    *{
+        background: local;
+    }
     .grid-container {
         grid-template-columns: 1fr;
         gap: 10px; 
     }
-
+.App-header
+{
+    margin-left: 400px;
+    width: 100%;
+}
     .grid-item {
         padding: 10px; 
     }
-
+.grid-item1{
+    margin-left: 55px;
+}
     .charts-grid {
         flex-direction: column; 
     }
@@ -144,12 +172,31 @@ position:fixed;
     }
     .in
     {
-        margin-top: 300px;
+        margin-top: 100px;
       font-size: large;
 line-height: 28px;
-        width: 100%;
-        height: 300px;
+        width:100%;
+        height: 10px;
+        margin-bottom: 200px;
+        margin-left: 560px;
+        margin-right: -10pc;
+        
     }
+ .grid-container{
+    text-align: center;
+    margin-left: 60px;
+ }
+    .op{
+
+        margin-left:340px;
+        width: max-content;
+    }
+*{
+    background: black;
+}
+.video-container{
+    display: none;
+}
 }
 
 @media (max-width: 368px) {
@@ -166,4 +213,30 @@ line-height: 28px;
         margin-left: 0;
         width: 100%;
     }
+    
 }
+
+.event-counter{
+    
+    margin-top: -20px;
+}
+  
+  .countdown {
+
+    font-size: 34px;
+    font-weight: bold;
+    color: #ff0000;
+    animation: blink 1s infinite;
+  }
+  
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
